apps/kelos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kelos
  namespace: kelos
  labels:
    app: kelos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kelos
  template:
    metadata:
      labels:
        app: kelos
    spec:
      serviceAccountName: kelos
      containers:
        - name: kelos
          image: kelosdev/kelos:latest
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
