apps/kelos/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kelos-ts
  namespace: kelos
  labels:
    app.kubernetes.io/instance: tailscale-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kelos
      port:
        number: 80
